added endpoint and swagger get categories
